--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/icons/favicon/favicon-16x16.png">
     <link rel="manifest" href="./assets/icons/favicon/site.webmanifest">
-    <link rel="stylesheet" href="./src/css/output.css">
+    <link rel="stylesheet" href="./public/css/output.css">
     <link rel="stylesheet" href="./src/css/burguer.css">
     <script src="./src/js/script.js" defer></script>
     <title>Infinity Hub</title>
