--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/icons/favicon/favicon-16x16.png">
     <link rel="manifest" href="./assets/icons/favicon/site.webmanifest">
     <link rel="stylesheet" href="./css/output.css">
-    <link rel="stylesheet" href="../src/css/burguer.css">
+    <link rel="stylesheet" href="./css/burguer.css">
     <script src="../src/js/script.js" defer></script>
     <title>Infinity Hub</title>
 </head>
